# tria

./: .gitignore  README.md  pyproject.toml  tria.py
src/: parsers.py  writers.py
